--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
-        <activity android:name=".WeatherActivity"></activity>
+        <activity android:name=".WeatherActivity"
+            android:screenOrientation="locked"></activity>
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="locked"
             android:theme="@style/CustomTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
