--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
         <activity android:name=".WeatherActivity"
-            android:screenOrientation="locked"></activity>
+            android:screenOrientation="locked">
+        </activity>
         <activity
             android:name=".MainActivity"
             android:screenOrientation="locked"
             android:theme="@style/CustomTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
